# basyx-python-sdk

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Json2RegoRulesConverter.py  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py  spec.yml  test.py  test_client.py
.github/workflows/: ci.yml  release.yml
Discovery Server/: Dockerfile  README.md  compose.yml  uwsgi.ini
Discovery Server/app/: main.py
Registry Server/: compose.yml  entrypoint.sh
Registry Server/app/: main.py
aas/: __init__.py  backends.py
aas/adapter/: __init__.py  _generic.py  aasx.py  couchdb.py  json_adapter.py
aas/backend/: __init__.py  backends.py  couchdb.py
aas/compliance_tool/: aas_compliance_tool.py  cli.py  compliance_check_aasx.py  compliance_check_json.py  compliance_check_xml.py  helper.py  json.py  state_manager.py
aas/examples/: __init__.py  example_create_aas.py  example_create_aas_mandatory_attributes.py  example_create_simple_aas.py  example_create_simple_aas_with_submodel.py  example_create_submodel_template.py  example_test_serialization.py  tutorial_aasx.py  tutorial_backend_couchdb.py  tutorial_create_simple_aas.py  tutorial_dynamic_model.py  tutorial_serialization_deserialization.py  tutorial_serialization_deserialization_json.py  tutorial_storage.py
aas/helpers/: __init__.py  example_aas.py  (+5 more)
basyx/: pyproject-aas.toml  pyproject-server.toml  pyproject.toml
compliance-tool/: .gitignore  NOTICE  README.md  requirements.txt  setup.py
compliance_tool/: LICENSE  README.md  pyproject.toml  setup.py
compliance_tool/aas_compliance_tool/: cli.py  compliance_check_aasx.py  compliance_check_json.py  compliance_check_xml.py  state_manager.py
compliance_tool/test/: __init__.py  test_aas_compliance_tool.py  test_compliance_check_aasx.py  test_compliance_check_json.py  test_compliance_check_xml.py  test_state_manager.py
compliance_tool/test/files/: test_demo_full_example.json  test_demo_full_example.xml  test_demo_full_example_wrong_attribute.json  test_demo_full_example_wrong_attribute.xml  test_deserializable_aas_warning.json  test_not_deserializable_aas.xml
compliance_tool/test/files/test_demo_full_example_json_aasx/: [Content_Types].xml
compliance_tool/test/files/test_demo_full_example_json_aasx/_rels/: .rels
compliance_tool/test/files/test_demo_full_example_json_aasx/aasx/: data.json
compliance_tool/test/files/test_demo_full_example_json_aasx/aasx/_rels/: aasx-origin.rels
compliance_tool/test/files/test_demo_full_example_json_aasx/docProps/: core.xml
compliance_tool/test/files/test_demo_full_example_xml_aasx/aasx/: data.xml
compliance_tool/test/files/test_demo_full_example_xml_wrong_attribute_aasx/aasx/: data.xml
compliance_tool/test/files/test_demo_full_example_xml_wrong_attribute_aasx/aasx/_rels/: aasx-origin.rels
discovery_server/: Dockerfile  README.md  compose.yml  requirements.txt
docs/: add-requirements.txt
policies/: access_policy.rego  rules.json
registry_server/: Dockerfile  README.md  compose.yml  entrypoint.sh  stop-supervisor.sh  supervisord.ini  uwsgi.ini
sdk/: .readthedocs.yaml  README.md  pyproject.toml
sdk/basyx/aas/: __init__.py
sdk/basyx/aas/adapter/: __init__.py  _generic.py  aasx.py  discovery.py  http.py  registry.py  resolver.py
sdk/basyx/aas/adapter/json/: json_deserialization.py  json_serialization.py
sdk/basyx/aas/adapter/xml/: __init__.py  xml_deserialization.py  xml_serialization.py
sdk/basyx/aas/backend/: __init__.py  backends.py  couchdb.py  local_file.py
sdk/basyx/aas/examples/: tutorial_aasx.py  tutorial_backend_couchdb.py  tutorial_navigate_aas.py  tutorial_serialization_deserialization.py  tutorial_storage.py
sdk/basyx/aas/examples/data/: _helper.py  example_aas.py  example_aas_mandatory_attributes.py  example_aas_missing_attributes.py  example_submodel_template.py
sdk/basyx/aas/model/: __init__.py  _string_constraints.py  aas.py  aas_descriptor.py  base.py  concept.py  datatypes.py  descriptor.py  provider.py  submodel.py  submodel_descriptor.py
sdk/basyx/aas/util/: identification.py  traversal.py
sdk/docs/: add-requirements.txt
sdk/docs/source/: conf.py  constraints.rst  index.rst
sdk/docs/source/_static/: custom.css
sdk/docs/source/adapter/: json.rst
sdk/docs/source/backend/: backends.rst  index.rst  local_file.rst
sdk/docs/source/examples/: _helper.rst  example_aas_mandatory_attributes.rst  index.rst
sdk/docs/source/model/: _string_constraints.rst  aas.rst  base.rst  concept.rst  datatypes.rst  provider.rst  submodel.rst
sdk/docs/source/tutorials/: index.rst  tutorial_backend_couchdb.rst  tutorial_navigate_aas.rst  tutorial_serialization_deserialization.rst  tutorial_storage.rst
sdk/docs/source/util/: index.rst  traversal.rst
sdk/test/_helper/: setup_testdb.py  test_helpers.py
sdk/test/adapter/aasx/: test_aasx.py
sdk/test/adapter/json/: test_json_deserialization.py  test_json_serialization.py  test_json_serialization_deserialization.py
sdk/test/adapter/xml/: test_xml_deserialization.py  test_xml_serialization.py  test_xml_serialization_deserialization.py
sdk/test/backend/: test_backends.py  test_couchdb.py  test_local_file.py
sdk/test/examples/: test_examples.py  test_helpers.py  test_tutorials.py
sdk/test/model/: test_aas.py  test_base.py  test_concept.py  test_datatypes.py  test_provider.py  test_string_constraints.py  test_submodel.py
sdk/test/util/: test_identification.py
server/: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
server/app/: discovery.py  http.py  http_api_helpers.py  main.py  pyproject.toml  registry.py  repository.py  server_model.py  version.py
server/app/adapter/: jsonization.py  xmlization.py
server/app/api_utils/: http_api_helpers.py  response.py
server/app/interfaces/: base.py  discovery.py  registry.py  repository.py
server/app/model/: __init__.py  descriptor.py  endpoint.py  service.py
server/app/server_model/: __init__.py  descriptor.py  endpoint.py
server/app/util/: converters.py
test/: test_app.py  test_backends.py  test_config.default.ini  test_simple_import.py
webapp/: app.py
(+275 files in other folders)
