[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "basyx-python-sdk"
description = "The Eclipse BaSyx Python SDK, an implementation of the Asset Administration Shell for Industry 4.0 systems"
authors = [
    { name = "The Eclipse BaSyx Authors", email = "admins@iat.rwth-aachen.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
requires-python = ">=3.8"
dependencies = [
    "python-dateutil>=2.8,<3",
    "lxml>=4.2,<5",
    "urllib3>=1.26,<3",
    "pyecma376-2>=0.2.4"
]
# This line indicates that the version is dynamically determined
dynamic = ["version"]

[tool.setuptools_scm]
# This section configures setuptools_scm
write_to = "basyx/version.py"  # Optional: creates a version.py file in your package

[project.optional-dependencies]
dev = [
    "mypy",
    "pycodestyle",
    "codeblocks",
    "coverage",
]

[project.urls]
"Homepage" = "https://github.com/eclipse-basyx/basyx-python-sdk"

[tool.setuptools]
packages = ["basyx"]

[tool.setuptools.package-data]
basyx = ["py.typed"]
"basyx.aas.examples.data" = ["TestFile.pdf"]

[tool.setuptools.exclude-package-data]
"*" = ["test", "test.*"]
