[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Configure setuptools_scm for version management:
# - Automatically infers the version number from the most recent git tag
# - Generates a version.py file in the package directory
# - Allows for automatic versioning between releases (e.g., 1.0.1.dev4+g12345)
# If you want to use the version anywhere in the code, use
# ```
# from aas_compliance_tool.version import version
# print(f"Project version: {version}")
# ```
root = ".."  # Defines the path to the root of the repository
version_file = "aas_compliance_tool/version.py"

[project]
name = "aas_compliance_tool"
dynamic = ["version"]
description = "AAS compliance checker based on the Eclipse BaSyx Python SDK"
authors = [
    { name = "The AAS Compliance Tool authors", email = "admins@iat.rwth-aachen.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
requires-python = ">=3.9"
dependencies = [
    "pyecma376-2>=0.2.4",
    "jsonschema>=4.21.1",
    "basyx-python-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pycodestyle",
    "codeblocks",
    "coverage",
]
# if you want local changes to the sdk to affect the compliance-tool first install
# only this with pip install .[local-sdk] --no-deps then install the other requirements
local-sdk = ["-e ../sdk"]

[project.urls]
"Homepage" = "https://github.com/eclipse-basyx/basyx-python-sdk"

[tool.setuptools]
packages = { find = { include = ["aas_compliance_tool*"], exclude = ["test*"] } }

[tool.setuptools.package-data]
aas_compliance_tool = ["py.typed"]

