[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Configure setuptools_scm for version management:
# - Automatically infers the version number from the most recent git tag
# - Generates a version.py file in the package directory
# - Allows for automatic versioning between releases (e.g., 1.0.1.dev4+g12345)
# If you want to use the version anywhere in the code, use
# ```
# from basyx.version import version
# print(f"Project version: {version}")
# ```
root = ".."  # Defines the path to the root of the repository
version_file = "basyx/version.py"

[project]
name = "basyx-python-sdk"
dynamic = ["version"]
description = "The Eclipse BaSyx Python SDK, an implementation of the Asset Administration Shell for Industry 4.0 systems"
authors = [
    { name = "The Eclipse BaSyx Authors", email = "admins@iat.rwth-aachen.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
requires-python = ">=3.9"
dependencies = [
    "lxml>=5.3",
    "python-dateutil>=2.8,<3",
    "pyecma376-2>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pycodestyle",
    "codeblocks",
    "coverage",
    "schemathesis~=3.7",
    "jsonschema~=4.7",
    "hypothesis~=6.13",
    "types-python-dateutil",
    "lxml-stubs~=0.5.1",
]
docs= [
    "sphinx~=8.2",
    "sphinx-rtd-theme~=3.0",
    "sphinx-argparse~=0.5.0"
]

[project.urls]
"Homepage" = "https://github.com/eclipse-basyx/basyx-python-sdk"

[tool.setuptools]
packages = { find = { include = ["basyx*"], exclude = ["test*"] } }

[tool.setuptools.package-data]
basyx = ["py.typed"]
"basyx.aas.examples.data" = ["TestFile.pdf"]
